# boolnetanalyzer

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
boolnetanalyzer/: __init__.py  bn_tools.py  load.py  randomize.py  utils.py
boolnetanalyzer/cubicalhomology/: Manifest.toml  Project.toml
boolnetanalyzer/cubicalhomology/src/: a_theory.jl  cubicalhomology.jl
docs/: conf.py  functions.rst  index.rst  installation.rst  representing_boolean_networks.rst  requirements.txt  setup.py
docs/_build/: .buildinfo  functions.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  representing_boolean_networks.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  functions.doctree  index.doctree  installation.doctree  representing_boolean_networks.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/booleantools/: bn_tools.html  load.html  randomize.html
docs/_build/_sources/: representing_boolean_networks.rst.txt
docs/_static/: custom.js
docs/_templates/: search.html
examples/: degenerate_example.py
tests/: test.py  tests_bn_tools.py
