[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "boolnetanalyzer"
version = "0.0.1"
description = "Package to analyze boolean networks"
readme = "README.md"
authors = [
    { name = "Venkata Sai Narayana Bavisetty", email = "narayana.venkata@ufl.edu" },
]
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
]
dependencies = [
    "tqdm >= 4.62.3",
    "requests >= 2.25.1",
    "pytest"
]
requires-python = ">=3.7"

[project.urls]
"Source" = "https://github.com/Sai271828/boolnetanalyzer"
"Documentation" = "https://boolnetanalyzer.readthedocs.io/"
